workspace = { members = ["examples/overview"] }
[package]
name = "yew-custom-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1", optional = true }
serde-value = { version = "0.7", optional = true }

[features]
table = ["dep:serde", "dep:serde-value"]
tabs = []
